fixed spacing

--- a/docs/style.css
+++ b/docs/style.css
@@ -205,6 +205,7 @@ ul {
   background-color: #7773ac21;
   height: 250px;
   padding: 15px;
+  margin: 10px;
   border-radius: 5px;
 }
 
